company fixes. truncation for company descriptions

--- a/client/css/utilities.import.less
+++ b/client/css/utilities.import.less
@@ -74,3 +74,8 @@ body {
     }
   }
 }
+
+.Companies .media-object, .Salespeople .media-object, 
+.Company .media-object, .Profile .media-object {
+    max-width:150px;
+}
